[package]
name = "rusty_forge"
version = "0.1.0"
edition = "2021"
description = "General-purpose library of utility methods for numerical simulations."
license = "BSD-3"
repository = ""
readme = "README.md"
keywords = ["numerical simulations", "utilities"]
categorier = ["filesystem", "science", "development-tools::build-utils"]

[dependencies]
chrono = { version = "0.4", features = [ "serde" ] }
config = "0.15"
rayon = "1.11"
regex = "1.12"
serde = { version = "1.0", features = [ "derive" ] }
sysinfo = "0.38"
toml = "0.8"
