[workspace]
resolver = "3"
members = [
           "forge-derive",
           "forge-builder",
           "forge-manager"
          ]

default-members = [
           "forge-derive",
           "forge-builder",
           "forge-manager"
          ] 

[workspace.package]
authors = ["Andrey Zelenskiy"]
categories = ["filesystem", "science", "development-tools::build-utils"]
description = "General-purpose library of utility methods for numerical simulations."
edition = "2024"
keywords = ["simulation", "utilities"]
license = "BSD 3-Clause License"
readme = "README.md"
repository = "https://codeberg.org/azelenskiy/rusty_forge.git"
rust-version = "1.91"
version = "0.1.0"

[workspace.dependencies]
# rusty_forge crates
forge-derive = { path = "forge-derive" }
forge-builder = { path = "forge-builder" }
forge-manager = { path = "forge-manager" }

# Internal dependencies
chrono = { version = "0.4", features = [ "serde" ] }
config = "0.15"
convert_case = "0.11"
proc-macro2 = "1.0"
quote = "1.0"
rand = "0.9"
rand_distr = "0.5"
rayon = "1.11"
regex = "1.12"
serde = { version = "1.0.147", features = [ "derive" ] }
syn = { version = "2.0", features = ["full"] }
sysinfo = "0.38"
tempfile = "3.26"
thiserror = "2.0"
toml = "0.8"

[workspace.lints.clippy]
needless_pass_by_ref_mut = "warn"
todo = "warn"
unwrap_used = "warn"
