[package]
name = "forge-builder"
authors.workspace = true
categories.workspace = true
description = "Tools to initialize data from input parameters following Builder pattern. Part of rusty_forge."
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
config.workspace = true
rand.workspace = true
rand_distr.workspace = true
serde.workspace = true

forge-derive.workspace = true

[lints]
workspace = true
