[package]
name = "forge-manager"
authors.workspace = true
categories.workspace = true
description = "Tools to setup and simulation projects. Part of rusty_forge."
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true


[dependencies]
chrono.workspace = true
clap.workspace = true
config.workspace = true
rand.workspace = true
rayon.workspace = true
regex.workspace = true
serde.workspace = true
sysinfo.workspace = true
tempfile.workspace = true
thiserror.workspace = true
toml.workspace = true

forge-derive.workspace = true
forge-builder.workspace = true

[lints]
workspace = true

[[bin]]
name = "forge_project"
path = "src/bin/forge_project.rs"
