[package]
name = "forge-builder"
authors.workspace = true
categories.workspace = true
description = "Tools to initialize data from input parameters following Builder pattern. Part of rusty_forge."
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
config.workplace = true
rand.workplace = true
rand_distr.workplace = true
serde.workplace = true

forge-derive.workspace = true

[lints]
workspace = true
